--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1033,6 +1033,410 @@ a {
 .cid-tWFzAUoEtA .mbr-text {
   color: #6b6b6b;
 }
+.cid-tWK81AHVde {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background-color: #fdfcfa;
+}
+.cid-tWK81AHVde .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-tWK81AHVde .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-tWK81AHVde .container-fluid {
+  padding: 0;
+}
+@media (max-width: 992px) {
+  .cid-tWK81AHVde .container-fluid {
+    padding: 0;
+  }
+}
+@media (max-width: 992px) {
+  .cid-tWK81AHVde .container {
+    padding: 0;
+  }
+}
+.cid-tWK81AHVde .row {
+  justify-content: center;
+}
+@media (max-width: 992px) {
+  .cid-tWK81AHVde .row {
+    margin: 0;
+  }
+}
+.cid-tWK81AHVde .card {
+  border-radius: 0;
+  padding: 0 32px;
+}
+@media (max-width: 992px) {
+  .cid-tWK81AHVde .card {
+    padding: 0 16px;
+  }
+}
+.cid-tWK81AHVde .card .row.cards {
+  position: relative;
+  padding-bottom: 50px;
+}
+@media (max-width: 992px) {
+  .cid-tWK81AHVde .card .row.cards {
+    padding-bottom: 30px;
+  }
+}
+.cid-tWK81AHVde .card .row.cards .border-wrap {
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: #263652;
+  bottom: 0;
+  left: 0;
+}
+.cid-tWK81AHVde .card .row.cards .text {
+  padding: 0 25px 0 0;
+}
+@media (max-width: 992px) {
+  .cid-tWK81AHVde .card .row.cards .text {
+    padding: 0;
+    margin-bottom: 30px;
+  }
+}
+.cid-tWK81AHVde .card .row.cards .text .title-wrapper .mbr-section-title {
+  margin-bottom: 30px;
+}
+.cid-tWK81AHVde .card .row.cards .text .title-wrapper .mbr-text {
+  margin-bottom: 0;
+}
+.cid-tWK81AHVde .card .row.cards .video {
+  padding: 0 0 0 25px;
+}
+@media (max-width: 992px) {
+  .cid-tWK81AHVde .card .row.cards .video {
+    padding: 0;
+  }
+}
+.cid-tWK81AHVde .card .row.cards .video .video-block .video-wrapper .app-video-wrapper img {
+  height: 310px;
+  object-fit: cover;
+}
+.cid-tWK81AHVde .card .row.cards .video .video-block .video-wrapper .app-video-wrapper::before {
+  color: #fdfcfa;
+  text-shadow: none;
+}
+.cid-tWK81AHVde .mbr-section-title {
+  color: #263652;
+}
+.cid-tWK81AHVde .mbr-text {
+  color: #263652;
+}
+.cid-tWK86LNQ1W {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background-color: #ffffff;
+}
+.cid-tWK86LNQ1W .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-tWK86LNQ1W .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+@media (max-width: 992px) {
+  .cid-tWK86LNQ1W .container {
+    padding: 0 16px;
+  }
+}
+.cid-tWK86LNQ1W .title-wrapper .mbr-section-title {
+  margin-bottom: 70px;
+}
+@media (max-width: 992px) {
+  .cid-tWK86LNQ1W .title-wrapper .mbr-section-title {
+    margin-bottom: 40px;
+  }
+}
+@media (max-width: 992px) {
+  .cid-tWK86LNQ1W .text-wrapper {
+    margin-bottom: 40px;
+  }
+}
+.cid-tWK86LNQ1W .text-wrapper .mbr-desc {
+  margin-bottom: 40px;
+}
+@media (max-width: 768px) {
+  .cid-tWK86LNQ1W .text-wrapper .mbr-desc {
+    margin-bottom: 20px;
+  }
+}
+.cid-tWK86LNQ1W .text-wrapper .mbr-text {
+  margin-bottom: 40px;
+}
+@media (max-width: 768px) {
+  .cid-tWK86LNQ1W .text-wrapper .mbr-text {
+    margin-bottom: 20px;
+  }
+}
+.cid-tWK86LNQ1W .video-block .video-wrapper iframe {
+  border-radius: 16px;
+}
+.cid-tWK86LNQ1W .video-block .video-wrapper .app-video-wrapper img {
+  height: 320px;
+  object-fit: cover;
+  border-radius: 16px;
+}
+.cid-tWK86LNQ1W .video-block .video-wrapper .app-video-wrapper::before {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 82px;
+  width: 82px;
+  color: #ffffff;
+  background-color: #08323c;
+  text-shadow: none;
+  font-size: 20px;
+  border-radius: 100%;
+  top: auto;
+  bottom: 20px;
+  left: 60px;
+}
+.cid-tWK86LNQ1W .mbr-section-title {
+  color: #08323C;
+}
+.cid-tWK86LNQ1W .mbr-desc {
+  color: #08323C;
+}
+.cid-tWK86LNQ1W .mbr-text {
+  color: #08323C;
+}
+.cid-tWK8AQPDCD {
+  padding-top: 2rem;
+  padding-bottom: 3rem;
+  background-color: #141414;
+}
+.cid-tWK8AQPDCD .row {
+  display: flex;
+  flex-direction: row-reverse;
+  border: 1px solid #ffffff;
+  margin-top: -1px;
+}
+.cid-tWK8AQPDCD .title-wrapper {
+  padding: 0 12px;
+}
+.cid-tWK8AQPDCD .text-block {
+  padding: 48px 24px;
+}
+.cid-tWK8AQPDCD .video-wrapper iframe {
+  width: 100%;
+}
+.cid-tWK8AQPDCD .video-block {
+  border-left: 1px solid #ffffff;
+  padding: 0;
+}
+.cid-tWK8AQPDCD .mbr-section-title {
+  text-align: center;
+  color: #FFFFFF;
+}
+.cid-tWK8AQPDCD .mbr-description {
+  text-align: center;
+  color: #FFFFFF;
+  padding: 16px;
+}
+@media (min-width: 992px) {
+  .cid-tWK8AQPDCD .mbr-description {
+    padding: 16px 60px 16px;
+  }
+}
+.cid-tWK8AQPDCD .mbr-text,
+.cid-tWK8AQPDCD .mbr-section-subtitle {
+  color: #FFFFFF;
+}
+@media (max-width: 991px) {
+  .cid-tWK8AQPDCD .video-block {
+    border-left: none;
+  }
+  .cid-tWK8AQPDCD .text-block {
+    border-top: 1px solid #ffffff;
+  }
+}
+@media (min-width: 992px) {
+  .cid-tWK8AQPDCD .title-wrapper {
+    padding: 0 48px;
+  }
+  .cid-tWK8AQPDCD .text-block {
+    padding: 60px;
+    border-right: 1px solid #ffffff;
+    margin-right: -1px;
+    margin-bottom: auto;
+  }
+}
+.cid-tWK8ukZyJ8 {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background-color: #ffffff;
+}
+.cid-tWK8ukZyJ8 .mbr-media {
+  position: relative;
+  width: 100%;
+  display: flex;
+}
+.cid-tWK8ukZyJ8 .mbr-media img {
+  width: 100%;
+  object-fit: cover;
+  border-radius: 20px;
+}
+.cid-tWK8ukZyJ8 .mbr-media span {
+  font-size: 4rem;
+  transition: all 0.2s;
+}
+.cid-tWK8ukZyJ8 .icon-wrap {
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  background: #ffffff;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  min-width: 65px;
+  min-height: 65px;
+  border-radius: 50%;
+  align-items: center;
+}
+.cid-tWK8ukZyJ8 .icon-wrap a:hover {
+  background-image: none !important;
+}
+.cid-tWK8ukZyJ8 .icon-wrap span {
+  margin-left: 5px;
+}
+.cid-tWK8ukZyJ8 .box {
+  height: 450px;
+  display: flex;
+}
+@media (max-width: 767px) {
+  .cid-tWK8ukZyJ8 .box {
+    height: 200px;
+  }
+}
+.cid-tWK8ukZyJ8 .modalWindow {
+  position: fixed;
+  z-index: 5000;
+  left: 0;
+  top: 0;
+  background-color: rgba(61, 61, 61, 0.65);
+  width: 100%;
+  height: 100%;
+}
+.cid-tWK8ukZyJ8 .modalWindow .modalWindow-container {
+  display: table-cell;
+  vertical-align: middle;
+}
+.cid-tWK8ukZyJ8 .modalWindow .modalWindow-video {
+  height: calc(44.9943757vw);
+  width: 80vw;
+  margin: 0 auto;
+}
+.cid-tWK8ukZyJ8 .close {
+  position: fixed;
+  opacity: 0.5;
+  font-size: 22px;
+  font-weight: 300;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  color: #fff;
+  top: 2.5rem;
+  right: 2.5rem;
+  text-shadow: none;
+  z-index: 5;
+  transition: opacity 0.3s ease;
+  border: 2px solid #fff;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
+.cid-tWK8ukZyJ8 .close:hover {
+  opacity: 1;
+  background: #000;
+  color: #fff;
+}
+.cid-tWK8ukZyJ8 .col-text {
+  display: flex;
+  align-items: center;
+  padding: 0 90px;
+}
+@media (max-width: 991px) {
+  .cid-tWK8ukZyJ8 .col-text {
+    padding: 50px 0.75rem 0;
+  }
+}
+.cid-tWK8ukZyJ8 .mbr-section-subtitle {
+  color: #555555;
+  padding-top: 12px;
+}
+.cid-tWK8ukZyJ8 .item-container {
+  width: 100%;
+}
+.cid-tWK8ukZyJ8 .item {
+  display: flex;
+  margin-top: 32px;
+  text-align: left;
+}
+.cid-tWK8ukZyJ8 .item:first-child {
+  margin-top: 0;
+}
+@media (max-width: 767px) {
+  .cid-tWK8ukZyJ8 .item {
+    flex-direction: column;
+    text-align: center;
+  }
+}
+.cid-tWK8ukZyJ8 .icon-box {
+  background: #0057fc;
+  width: 40px;
+  min-width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-right: 24px;
+  padding: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+@media (max-width: 767px) {
+  .cid-tWK8ukZyJ8 .icon-box {
+    margin: 0 auto 24px;
+  }
+}
+.cid-tWK8ukZyJ8 .text-box {
+  flex-grow: 1;
+}
+.cid-tWK8ukZyJ8 .number-text {
+  color: #ffffff;
+}
+.cid-tWK8ukZyJ8 .icon-text {
+  color: #555555;
+}
+.cid-tWK8ukZyJ8 .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-tWK8ukZyJ8 .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
 .cid-tNbVME3gQ1 {
   padding-top: 0rem;
   padding-bottom: 5rem;
